# glp1-urban-health

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  explain-this-data-engineering.md  pyproject.toml  requirements.txt  streamlit_app.py
dashboard/: app.py
data/: glp1_health.duckdb
pipelines/: run_pipeline.py
src/analysis/: correlation.py
src/db/: schema.sql
src/glp1_urban_health.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ingestion/: cdc_brfss.py  census_client.py  clinicaltrials.py  fda_client.py
src/transforms/: staging.py
tests/: test_fda_client.py  test_transforms.py
