[project]
name = "glp1-urban-health"
version = "0.1.0"
description = "Analysing the relationship between GLP-1 drug approvals and US state-level obesity trends"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    "scipy>=1.14.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
